Changelog
=========

1.7.0 - unreleased
------------------

* Automatically set the registries into development mode if Zope itself runs
  in development mode.
  [hannosch]

* Get the tests working again under Plone 5 and make sure we handle
  zope.app.publisher file resources correctly under repoze.zope2.
  [hannosch]

* Added missing InitializeClass call for BaseRegistryTool.
  [davisagli]

* Changed default values for resources to more sensible values.
  [hannosch]

* Restructured documentation files.
  [hannosch]

* Added `authenticated` as a new option to all resources. If a resource is
  marked this way, it will only be shown for authenticated users. This makes
  the most common use-case of restricting resources to logged-in users easier
  and allows to optimize the internal API for speed for this use-case. An
  expression on a resource is ignored if the authenticated flag is set.
  [hannosch]

* Removed BBB imports and code. We require Zope 2.12 now.
  [hannosch]

* Handle a missing portal_kss tool gracefully in the kineticstylesheets
  viewlet.
  [hannosch]

* Added BBB imports to make sure the InitializeClass can be imported in
  Zope versions before 2.12.
  [hannosch]

* Avoid dependency on the zope.app.zapi package.
  [hannosch]

* Declare package dependencies, fixed deprecation warnings for use of
  Globals and changed error raising to be forward compatible.
  [hannosch]

* Change the fix for #7522 made in 1.4.3. For inline resources we pass
  Unicode down into the page templates. The TAL machinery expects to get
  Unicode and not encoded strings.
  [hannosch]

1.5.3 - 2009-05-17
------------------

* Allow setting of debug mode in registries through Generic Setup
  profiles. This closes http://dev.plone.org/plone/ticket/8712
  [dunlapm]

* Fixed error with inline z3resources not being able to handle a POST
  request. This fixes http://dev.plone.org/plone/ticket/8998
  [dunlapm]

1.5.2 - 2009-04-21
------------------
