@@ -133,8 +133,6 @@ class KSSRegistryTool(BaseRegistryTool):
         """
         debugmode = REQUEST.get('debugmode', False)
         self.setDebugMode(debugmode)
-        autogroupingmode = REQUEST.get('autogroupingmode', False)
-        self.setAutoGroupingMode(autogroupingmode)
         records = REQUEST.get('kineticstylesheets')
         records.sort(lambda a, b: a.sort - b.sort)
         self.resources = ()
