@@ -124,7 +124,7 @@ legend {
     font-size: 90%;
 }
 
-#debugmodelabel, #autogroupingmodelabel {
+#debugmodelabel {
     font-weight : bold;
 }
 
@@ -170,12 +170,6 @@ legend {
         http-headers to prevent browsers from caching the stylesheets.
         Recommended during css-related development. Remember to turn it off
         again, as the debugmode affects performance.
-    </p>
-    <p>
-        <input type="checkbox" id="autogroupingmode" name="autogroupingmode:boolean"
-               tal:attributes="checked here/getAutoGroupingMode" />
-        <label for="autogroupingmode" id="autogroupingmodelabel">Automatic grouping mode</label>
-        In automatic grouping mode, resources are first ordered into mergeable groups based on their settings and after that merged based on their position in the registry.
     </p>
 
     <p>The order of the stylesheets in this form is the same as the
